--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,9 +3,42 @@
 @tailwind utilities;
 
 @layer base {
+  h1,
+  .h1 {
+    @apply text-3xl font-bold md:text-5xl;
+  }
+
+  h2,
+  .h2 {
+    @apply text-2xl font-bold md:text-4xl;
+  }
+
+  h3,
+  .h3 {
+    @apply text-xl font-bold md:text-3xl;
+  }
+
+  h4,
+  .h4 {
+    @apply text-lg font-bold md:text-2xl;
+  }
+  h5,
+  .h5 {
+    @apply text-base font-bold md:text-xl;
+  }
+  h6,
+  .h6 {
+    @apply text-sm font-bold md:text-lg;
+  }
+
+  body,
+  .p {
+    @apply text-sm md:text-base;
+  }
   .layout {
     /* 1100px */
+    /* 1536px */
     max-width: 68.75rem;
-    @apply mx-auto w-10/12;
+    @apply mx-auto min-h-screen w-10/12 sm:w-10/12 md:w-9/12 lg:w-8/12 xl:w-6/12;
   }
 }
