--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,6 +3,15 @@
 @tailwind utilities;
 
 @layer base {
+  @font-face {
+    font-family: 'Josefin Sans';
+    font-style: normal;
+    font-weight: 400 700;
+    src: url('/fonts/JosefinSans-VariableFont_wght.ttf') format('truetype');
+  }
+  body {
+    @apply bg-light_veryLightGrey dark:bg-dark_veryDarkBlue;
+  }
   h1,
   .h1 {
     @apply text-3xl font-bold md:text-5xl;
@@ -39,6 +48,6 @@
     /* 1100px */
     /* 1536px */
     max-width: 68.75rem;
-    @apply mx-auto min-h-screen w-10/12 sm:w-10/12 md:w-9/12 lg:w-8/12 xl:w-6/12;
+    @apply mx-auto min-h-screen w-10/12 py-8 font-josefin sm:w-10/12 md:w-9/12 lg:w-8/12 xl:w-5/12;
   }
 }
